# python

./: pyproject.toml
Aula1/: Aula1Desafio.py  Aula2.py  Aula3.py  main.py  pyproject.toml
Aula4/: Aula4Exercicios.py
Exercicios/: 1- Exercicios.py  1-ETL.py  2- Exercicios.py  3- Exercicios.py
Exercicios-API/: README.MD  api.py
Exercicios-API/src/: controller.py  cotacao.db  db.py  main.py  models.py  schema.py
Exercicios-ETL/Aula7-Python/: 1-ETL.py  ETL.py  main.py
Exercicios-ETL/Aula8-Python/: ETL.py  pipeline.py
Exercicios-ETL/Aula8-Python/data/: coleta_dia3.json
Exercicios-POO/Aula 12/: csv_teste.py  user_class.py
Exercicios-POO/src/interface/utils/: csv_class.py
Exercicios-sql/: desafio.db  desafio.py  desafio_query.py  exemplo_01.py
