[project]
name = "python"
version = "0.1.0"
description = ""
authors = [
    {name = "Jean Alves",email = "jean_prog@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.12.0,<3.0.0)",
    "pandera (>=0.26.1,<0.27.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
